[package]
name = "playground"
version = "0.1.0"
authors = ["Karl Johansson <karl.johansson@t2data.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { version = "*", path = "../base" }
ggez = "0.5.1"
rand = "0.7"
log = "0.4.0"
env_logger = "0.7.1"
clap = "3.0.0-beta.1"

[profile.dev]
opt-level = 1
